# classifiers-lib

./: .gitignore  README.md  oct2py.nix  setup.py  shell.nix
cls/classifiers/: abstract.py  simple.py
cls/optimizations/: compression.py  distribution.py  native_utils.py  oi_lpm.py  runner.m  sharing.py
cls/parsers/: parsing.py
cls/vmrs/: abstract.py  simple.py
p4t_native/: CMakeLists.txt  bit_array.h  bits_aux.h  boolean_minimization.cpp  boolean_minimization.h  chain_algos.cpp  chain_algos.h  common.cpp  common.h  distribution_algos.cpp  distribution_algos.h  expansion_algos.cpp  expansion_algos.h  filter.h  hashing_aux.h  intersections_opt.cpp  intersections_opt.h  oi_algos.cpp  oi_algos.h  p4t_native.cpp  p4t_native.h  p4t_native_ext.cpp  python_utils.cpp  python_utils.h  rule.h  shell.nix  support.h  timer.h  utils.h
p4t_native/p4t/: CMakeLists.txt  common.cpp  common.h  p4t_native.cpp  p4t_native.h  p4t_native_ext.cpp
p4t_native/p4t/model/: filter.h  rule.h  support.cpp  support.h
p4t_native/p4t/opt/: boolean_minimization.cpp  boolean_minimization.h  chain_algos.cpp  chain_algos.h  distribution_algos.cpp  distribution_algos.h  expansion_algos.cpp  expansion_algos.h  intersections_opt.cpp  intersections_opt.h  oi_algos.cpp  oi_algos.h  updates.cpp  updates.h
p4t_native/p4t/utils/: bit_array.h  bits_aux.h  collections.h  hashing_aux.h  python_utils.cpp  python_utils.h  timer.h
test/classifiers/: test_cls_generic.py  test_cls_simple.py
test/optimizations/: test_oi_lpm.py
test/vmrs/: test_generic.py  test_simple.py  test_vmr_bmv2.py
